    <resources>
    <string name="app_name">My Application</string>
        <string name="general">Список дел</string>
        <string name="button_general">Добавить задачу</string>
        <string name="task_general">Вечером идем в кино</string>
        <string name="task_description_general">Идем в кино с коллегами</string>
        <string name="date_general">14.01.2023</string>
        <string name="time_general">19:40</string>
        <string name="task_general_3">Запись в автосервис</string>
        <string name="task_description_general_3">Сдать автомобиль в автосервис на у. Бесердская д.14. замена масла</string>
        <string name="task_general_2">Забразть заказ с Ozon</string>
        <string name="task_description_general_2">Пункгт выдачи ул. Ленинина, 103</string>
        <string name="alarm">Добавить будильник</string>
        <string name="time">07:00</string>
        <string name="time_alarm">08:00</string>
        <string name="alarm_button">Добавить будильник</string>
        <string name="calendar">Календарь</string>
        <string name="setting">Настройки</string>
        <string name="profile">Профиль пользователя</string>
        <string name="date_time">Дата и время</string>
        <string name="setting_sound">Настройки звука</string>
        <string name="update_check">Проверка обновления</string>
        <string name="edit_task">Изменить задачу</string>
        <string name="delete_task">Удалить задачу</string>
        <string name="header_task">Заголовок задачи</string>
        <string name="add_task_button">Записать задачу</string>
        <string name="description_task">Описание задачи</string>
        <string name="date_edit_alarm">14.01.2021</string>
        <string name="time_edit_alarm">16:30</string>
        <string name="login_in">Регистрация</string>
        <string name="name_profile">Имя пользователя</string>
        <string name="email_profile">Адрес электронной почты</string>
        <string name="password_profile">Пароль</string>
        <string name="add_day_alarm_create">Повторять каждый день</string>
        <string name="Monday">Понедельник</string>
        <string name="Tuesday">Вторник</string>
        <string name="Wednesday">Среда</string>
        <string name="Thursday">Четверг</string>
        <string name="Friday">Пятница</string>
        <string name="Saturday">Суббота</string>
        <string name="Sanday">Воскресение</string>
        <string name="add_alarm">Создать будильник</string>
        <string name="delete_alarm">Удалить будильник</string>
        <string name="create_alarm">Создать будильник</string>
        <string name="login_failed">Вход не выполнен</string>
        <string name="sing">Войти</string>
</resources>